Isolate parsers between test cases so no parser state can leak